# http-fs-hello

./: .gitignore  Cargo.toml  README.md  justfile
components/http-fs-hello/: Cargo.toml  README.md  hostgroup.yaml  workloaddeployment.yaml
components/http-fs-hello/src/: lib.rs
components/http-fs-hello/wit/: world.wit
crates/test-int/: Cargo.toml  build.rs
crates/test-int/src/: lib.rs
crates/test-int/tests/: http-fs-hello.rs
