[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
bytes = { version = "1.11.0", default-features = false }
reqwest = { version = "0.12.24", default-features = false }
semver = { version = "1.0.27", default-features = false }
tempfile = { version = "3.23.0", default-features = false }
tokio = { version = "1.48.0", default-features = false }
tracing = { version = "0.1.43", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false }
uuid = { version = "1.19.0", default-features = false }

wash-runtime = { git = "https://github.com/wasmCloud/wash", rev = "530118278857178b6ee34080ed67133f34293127" }
wash = { git = "https://github.com/wasmCloud/wash", rev = "530118278857178b6ee34080ed67133f34293127" }
